# Aerocube-ImP

./: .gitignore  CMakeLists.txt  README.md  openCV_hello_world.cpp
fiducialMarker/: fiducialMarker.py  fiducialMarkerTest.py
fiducialMarkerModule/: aerocubeMarker.py  fiducialMarker.py  fiducialMarkerTest.py  testFiducialMarker.py
imageProcessing/: README.md  aerocubeMarker.py  aerocubeMarkerTest.py  cameraCalibration.py  cameraCalibrationTest.py  imageProcessingInterface.py  imageProcessingInterfaceTest.py  settings.py  testAeroCube.py  testAerocubeMarker.py  testCameraCalibration.py  testImageProcessingInterface.py
lib/chilitags/: CMakeLists.txt
tests/: CMakeLists.txt  single-image-post-estimation.cpp
